--- a/tasks/ldap_account_configure.yml
+++ b/tasks/ldap_account_configure.yml
@@ -7,8 +7,8 @@
     dn: "{{ users_ou }}"
     objectClass: organizationalUnit
     state: present
-  notify:
-    - restart_ns_daemons
+  # notify:
+  #   - restart_ns_daemons
 
 - name: Groups OU
   community.general.ldap_entry:
@@ -18,8 +18,8 @@
     dn: "{{ groups_ou }}"
     objectClass: organizationalUnit
     state: present
-  notify:
-    - restart_ns_daemons
+  # notify:
+  #   - restart_ns_daemons
 
 - name: Create Groups
   community.general.ldap_entry:
@@ -34,8 +34,8 @@
       description: "{{ item.value.description }}"
       gidNumber: "{{ item.value.gid }}"
     state: present
-  notify:
-    - restart_ns_daemons
+  # notify:
+  #   - restart_ns_daemons
   loop: "{{ ssh_groups | default({}) | dict2items }}"
   loop_control:
     label: "{{ item.key }}"
@@ -48,8 +48,8 @@
     attributes:
       memberUid: "{{ item.value.members }}"
     state: exact
-  notify:
-    - restart_ns_daemons
+  # notify:
+  #   - restart_ns_daemons
   loop: "{{ ssh_groups | default({}) | dict2items }}"
   loop_control:
     label: "{{ item.key }}"
@@ -88,8 +88,8 @@
   loop_control:
     label: "{{ item.key }}"
   register: ssh_users_added
-  notify:
-    - restart_ns_daemons
+  # notify:
+  #   - restart_ns_daemons
 
 #
 - name: Flush handlers
